APPS-5830 Removed java 17 calls